--- a/hobbies.html
+++ b/hobbies.html
@@ -19,5 +19,24 @@ and open the template in the editor.
             <li>Creative Writing - story telling</li>
             <li>Martial Arts - Capoeira</li>
         </ol>
+        <table>
+            <tr>
+                <td>Art</td>
+                <td>Traditional and digital</td>
+            </tr>
+            <tr>
+                <td>Creative Writing</td>
+                <td>Multi-genre of story telling</td>
+            </tr>
+            <tr>
+                <td>Martial Arts</td>
+                <td>Capoeira</td>
+            </tr>
+            <tr>
+                <td>Game Design</td>
+                <td>Creating worlds and characters</td>
+            </tr>
+            
+        </table>
     </body>
 </html>
