--- a/hobbies.html
+++ b/hobbies.html
@@ -12,14 +12,10 @@ and open the template in the editor.
     </head>
     <body>
         <h3>My Hobbies</h3>
+        
+        <hr size="3" noshade>
 
-        <ol>
-            <li>Art - pencil and digital</li>
-            <li>Game design - creating worlds and characters</li>
-            <li>Creative Writing - story telling</li>
-            <li>Martial Arts - Capoeira</li>
-        </ol>
-        <table>
+        <table cellspacing="10">
             <tr>
                 <td>Art</td>
                 <td>Traditional and digital</td>
