--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,12 @@ and open the template in the editor.
         <title>Contact Info</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
         <h1>My Contact Details </h1>
         <p>thompsonb905@yahoo.com</p>
-        <hr size="2" noshade>
+        <hr size="2">
         <form action="mailto:thompsonb905@yahoo.com" method="post" enctype="text/plain">
             <label>Your Name:</label>
             <input type="text" name="yourName"><br>
