--- a/hobbies.html
+++ b/hobbies.html
@@ -9,11 +9,12 @@ and open the template in the editor.
         <title>My Hobbies</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
         <h3>My Hobbies</h3>
         
-        <hr size="3" noshade>
+        <hr size="3">
 
         <table cellspacing="10">
             <tr>
