--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Bernard's Personal Site</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Bernard's Personal Site</title>
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-        <hr size="2" noshade>
         <table cellspacing="20">
             <tr>
-                <td><img src='images/profile.jpg' alt='Bernard profile pic'></td>
+                <td><img class="profile" src='images/profile.jpg' alt='Bernard profile pic'></td>
                 <td><h1>Bernard Thompson</h1>
         <p><em>Friend, Builder, <strong>Developer</strong></em></p>
         <p>A Software Developer with a primary focus on java and android applications.</p></td> 
@@ -25,7 +25,7 @@ and open the template in the editor.
         <p><em>Friend, Builder, <strong>Developer</strong></em></p>
         <p>I am a Software Developer with a primary focus on java and android applications.</p> 
         -->
-        <hr size="2" noshade>
+        <hr size="2" >
         <h3><a href="https://github.com/Bambam905?tab=repositories">Projects Worked on</a></h3>
 
         <table cellspacing="10">
@@ -55,7 +55,7 @@ and open the template in the editor.
                 <td>A person to person home procurement site</td>
             </tr>
         </table>
-        <hr size="2" noshade>
+        <hr size="2" >
         <h3>Skills</h3>
         
         <table cellspacing="10">
@@ -78,9 +78,8 @@ and open the template in the editor.
         </table>
             
 
-        <hr size="2" noshade>
+        <hr size="2" >
         <a href="hobbies.html">My Hobbies</a>
         <a href="contact.html">Contact Me</a>
-        <hr size="2" noshade>
     </body>
 </html>
